# TurkishDeasciifier-CPP

./: .gitignore  CMakeLists.txt  NGramDeasciifier.cpp  NGramDeasciifier.h  README.md  SimpleAsciifier.cpp  SimpleAsciifier.h  SimpleDeasciifier.cpp  SimpleDeasciifier.h  TestDeasciifier.cpp  conanfile.py
Test/: NGramDeasciifierTest.cpp  SimpleAsciifierTest.cpp  SimpleDeasciifierTest.cpp
include/: Word.h
src/: Asciifier.h  CMakeLists.txt  Deasciifier.h  NGramDeasciifier.cpp  NGramDeasciifier.h  SimpleAsciifier.cpp  SimpleAsciifier.h  SimpleDeasciifier.cpp  SimpleDeasciifier.h
